fix: brought back the translateX transformation and added hidden overflow to get around the extra spacing

--- a/app/scss/_carousel.scss
+++ b/app/scss/_carousel.scss
@@ -44,11 +44,11 @@
     }
 
     &.next {
-      // transform: translateX(100%);
+      transform: translateX(100%);
     }
 
     &.prev {
-      // transform: translateX(-100%);
+      transform: translateX(-100%);
     }
   }
 
@@ -62,6 +62,7 @@
     position: absolute;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
+    z-index: 2;
 
     @include breakpoint-up(medium) {
       bottom: rem(33px);
